--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "axios": "^1.13.2",
     "lucide-react": "^0.562.0",
+    "moment": "^2.30.1",
     "prismjs": "^1.30.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.12.0"
+    "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.12.0",
+    "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
