--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,8 @@
     "react-dom": "^19.2.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.12.0",
+    "react-syntax-highlighter": "^16.1.0",
+    "remark-gfm": "^4.0.1",
     "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
