--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "html2pdf.js": "^0.14.0",
     "lucide-react": "^0.562.0",
     "moment": "^2.30.1",
     "prismjs": "^1.30.0",
