--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "prismjs": "^1.30.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.12.0",
     "react-syntax-highlighter": "^16.1.0",
