--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,8 @@
   "dependencies": {
     "axios": "^1.13.2",
     "cors": "^2.8.5",
-    "html2pdf.js": "^0.14.0",
+    "dayjs": "^1.11.19",
     "lucide-react": "^0.562.0",
-    "moment": "^2.30.1",
     "prismjs": "^1.30.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -36,6 +35,7 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "postcss": "^8.5.6",
+    "rollup-plugin-visualizer": "^6.0.5",
     "tailwindcss": "^3.4.19",
     "vite": "^7.2.4"
   }
